--- a/src/client/modules/my/app/app.css
+++ b/src/client/modules/my/app/app.css
@@ -19,8 +19,8 @@ my-wiab {
 }
 
 my-tile {
-    width: 500px;
-    max-width: 25%;
+    width: 36%;
+    /* max-width: 40%; */
     margin: 2vw;
 }
 
